tests/ui/error-codes/E0131.rs
fn main<T>() {
    //~^ ERROR E0131
}
